<resources>
    <string name="app_name">COMP354MN-Project</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- User Profile Settings -->
    <string name="pref_header_user">User Profile</string>

    <!-- Name -->
    <string name="pref_title_user_name">Name</string>

    <!-- Age -->

    <string name="pref_title_user_age">Age</string>
    <integer name="pref_user_age_min">16</integer>
    <integer name="pref_user_age_max">99</integer>

    <!-- Height -->

    <string name="pref_title_user_height">Height (in cm)</string>
    <integer name="pref_user_height_max">240</integer>
    <integer name="pref_user_height_min">60</integer>

    <!-- Weight -->

    <string name="pref_title_user_weight">Weight (in kg)</string>
    <integer name="pref_user_weight_max">160</integer>
    <integer name="pref_user_weight_min">40</integer>


    <!-- Settings for Services -->
    <string name="pref_header_services">Services</string>

    <string name="pref_title_services_dark_sky_api">Dark Sky API key</string>
    <string name="pref_title_services_endomondo_api">Endomondo API key</string>

    <!-- Settings for Location -->
    <string name="pref_header_location">Location</string>
    <string name="pref_title_location_allow_gps">Allow GPS</string>
    <string name="pref_title_location_override_location">Override location</string>

    <!-- About page -->
    <string name="pref_header_about">About...</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- App Info -->
    <string name="AboutActivity_Title">COMP354-MN Project (Fall 2018)</string>
    <string name="AboutActivity_Authors">Chris Hewlings - #29145958</string>
    <string name="AboutActivity_Version">v0.2</string>
    <string name="AboutActivity_AppBlurb">This application was a project for Concordia University\'s COMP 354 course, to tabulate and correlate weather data and fitness data from Dark Sky and Endomondo, respectively.</string>


    <!-- Attributions -->
    <string name="resource_attributions_title">Resources</string>
    <string name="resource_attributions">All contributions are Creative Commons licensed for redistribution.\n
        weather_spring_sunny.jpg - Flickr user abdallah\n
        weather_summer_sunny.jpg - Flickr user Artur Staszewski\n
        weather_fall_sunny.jpg - Flickr user Guilhem Vellut\n
        weather_spring_sunny.jpg - Flickr user Artur Staszewski\n
        \n
        weather_spring_overcast.jpg - Wikimedia Commons user jeangagnon\n
        weather_summer_overcast.jpg - Wikimedia Commons user jeangagnon\n
        weather_fall_overcast.jpg - Wikimedia Commons user jeangagnon\n
        weather_winter_overcast.jpg - Wikimedia Commons user Maurice HADDAD\n
        \n
        weather_spring_rainy.jpg - Pixabay user gaille2000\n
        weather_summer_rainy.jpg - Wikimedia Commons user Cjp24\n
        weather_fall_rainy.jpg - Wikimedia Commons user jeangagnon\n
        weather_winter_rainy.jpg - Wikimedia Commons user Nicolas M. Perrault\n
        \n
        weather_winter_snow.jpg - Wikimedia Commons user Anurag Abhay
    </string>

    <!-- Splash screen -->
    <string name="do_gms_setup">Please sign in with your Google account.</string>
    <string name="do_profile_setup">Create new profile...</string>
    <string name="welcome_back_user">Welcome back, %1$s.</string>
    <string name="welcome_user">Welcome.</string>

    <!-- Main Activity -->

    <string name="ds_blurb">Powered by Dark Sky™</string>

    <!-- Today card view -->
    <string name="card_today_TV_Temperature_Text">It\'s currently %1$.2f℃ and %2$s outside.</string>


    <string name="warning">Warning!\t  </string>
    <string name="card_Today_TV_WarnPrecip_Text">Precipitation chance is high : %1$.1f %%</string>
    <string name="card_Today_TV_WarnWind_Text">Wind speed is high : %1$.1f kph </string>

    <!-- Stats card view -->
    <string-array name="graph_types">
        <item>km biked per day</item>
        <item>Temperature</item>
        <item>Precipitation</item>
        <item>Wind Speed</item>
    </string-array>

    <string name="card_Stats_TV_7DayAverage">7-Day Average: %1$s</string>

    <!-- You card view -->

</resources>
