<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
            android:fragment="ca.concordia.comp354mn.comp354mn_project.SettingsActivity$UserPreferenceFragment"
            android:title="@string/pref_header_user"
            android:icon="@drawable/ic_info_black_24dp"/>

    <header
            android:fragment="ca.concordia.comp354mn.comp354mn_project.SettingsActivity$ServicesPreferenceFragment"
            android:title="@string/pref_header_services"
            android:icon="@drawable/ic_notifications_black_24dp"/>

    <header
            android:fragment="ca.concordia.comp354mn.comp354mn_project.SettingsActivity$LocationPreferenceFragment"
            android:title="@string/pref_header_location"
            android:icon="@drawable/ic_sync_black_24dp"/>

</preference-headers>
