<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<SwitchPreference-->
            <!--android:key="example_switch"-->
            <!--android:title="@string/pref_title_social_recommendations"-->
            <!--android:summary="@string/pref_description_social_recommendations"-->
            <!--android:defaultValue="true"/>-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
            android:key="user_name"
            android:title="@string/pref_title_user_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"/>
    <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
            android:key="user_age"
            android:title="@string/pref_title_user_age"
            app:vnt_maxValue="@integer/pref_user_age_max"
            app:vnt_minValue="@integer/pref_user_age_min" />

    <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
            android:key="user_height"
            android:title="@string/pref_title_user_height"
            app:vnt_maxValue="@integer/pref_user_height_max"
            app:vnt_minValue="@integer/pref_user_height_min" />

    <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
            android:key="user_weight"
            android:title="@string/pref_title_user_weight"
            app:vnt_maxValue="@integer/pref_user_weight_max"
            app:vnt_minValue="@integer/pref_user_weight_min" />

</PreferenceScreen>
