<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_about"
        tools:context="ca.concordia.comp354mn.project.ui.AboutActivity"
        android:padding="@dimen/activity_horizontal_margin">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">



            <TextView
                    android:text="@string/AboutActivity_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aboutContent_appTitle"
                    tools:layout_editor_absoluteY="16dp"
                    tools:layout_editor_absoluteX="16dp"/>

            <TextView
                    android:text="@string/AboutActivity_Authors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/aboutContent_appAuthors"
                    tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="16dp"/>

            <TextView
                    android:text="@string/AboutActivity_Version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/aboutContent_appVersion"
                    tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="16dp"/>

            <TextView
            android:text="@string/AboutActivity_AppBlurb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/aboutContent_appBlurb"
            tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="16dp"/>


    <TextView
            android:text="@string/resource_attributions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/aboutContent_attributions"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.060000002"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
